--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Wandb files
+wandb/
+
+# Project specific
+data/
+weights/**/*epoch*.pth
